--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 8
           architecture: ${{ matrix.architecture }}
       - if: startsWith(matrix.os, 'ubuntu') && startsWith(matrix.architecture, 'x86')
