--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
         name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build libraries
-        run: gradlew buildNative
+        run: ./gradlew buildNative
       - name: Push compiled library back to GitHub
         run: |
           git config user.name "github-actions[bot]"
